--- a/sentence-similarity.ipynb
+++ b/sentence-similarity.ipynb
@@ -3,10 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "512f9037",
+   "id": "169a8162",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import csv\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from scipy import spatial\n",
@@ -16,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5be33981",
+   "id": "949e5309",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "796429e8",
+   "id": "5189a99a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "efd7eee6",
+   "id": "ec232240",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fd20669",
+   "id": "85a601d3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -116,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "851e06ab",
+   "id": "6c24cde1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -124,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "853a3b87",
+   "id": "d9d29bcc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -132,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dc35060",
+   "id": "ac623600",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -140,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "def97de4",
+   "id": "28a0bb86",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -148,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da16ec32",
+   "id": "a2b0ec84",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -156,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a0f78a7",
+   "id": "69e402d6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -164,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01a471c8",
+   "id": "2e39d508",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -172,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7a5fe68f",
+   "id": "28f823d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4c7da9e0",
+   "id": "8249a553",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ab2a7670",
+   "id": "a116706c",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5ac3d7fe",
+   "id": "97c4fe00",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6f7d6412",
+   "id": "9fa11e4f",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d02ad522",
+   "id": "1d98e590",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5518cab5",
+   "id": "a8802a26",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "66ce5267",
+   "id": "08d05362",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "470f09bf",
+   "id": "edf01103",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "16b9ed66",
+   "id": "254f08e7",
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d7696e2d",
+   "id": "075659a7",
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "00e2021a",
+   "id": "7cbca7d1",
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "2137a7eb",
+   "id": "6c8412a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "506dbaab",
+   "id": "7b5f414c",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e8983ec",
+   "id": "e681c9ea",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -575,15 +577,178 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e513cc67",
+   "id": "411c12af",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "id": "24bde631",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>238</th>\n",
+       "      <th>239</th>\n",
+       "      <th>240</th>\n",
+       "      <th>241</th>\n",
+       "      <th>242</th>\n",
+       "      <th>243</th>\n",
+       "      <th>244</th>\n",
+       "      <th>245</th>\n",
+       "      <th>246</th>\n",
+       "      <th>247</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[Artist, Title, Lyric]</td>\n",
+       "      <td>[Dua Lipa, New Rules, one one one one one   ta...</td>\n",
+       "      <td>[Dua Lipa, Don’t Start Now, if you don't wanna...</td>\n",
+       "      <td>[Dua Lipa, IDGAF, you call me all friendly tel...</td>\n",
+       "      <td>[Dua Lipa, Blow Your Mind (Mwah), i know it's ...</td>\n",
+       "      <td>[Dua Lipa, Be the One, i see the moon i see th...</td>\n",
+       "      <td>[Dua Lipa, Break My Heart, i've always been th...</td>\n",
+       "      <td>[Dua Lipa, Homesick, dua lipa here where the s...</td>\n",
+       "      <td>[Dua Lipa, Levitating, if you wanna run away w...</td>\n",
+       "      <td>[Dua Lipa, Physical, common love isn't for us ...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[Dua Lipa, New Love (Jarreau Vandal Remix), no...</td>\n",
+       "      <td>[Dua Lipa, Electricity (StarFox Remix), dua li...</td>\n",
+       "      <td>[Dua Lipa, Get Over You, hey hey   after a few...</td>\n",
+       "      <td>[Dua Lipa, New Love (Paraone Remix), now it's ...</td>\n",
+       "      <td>[Dua Lipa, Hotter Than Hell (Shadow Child Remi...</td>\n",
+       "      <td>[Dua Lipa, Hotter Than Hell (Carsten Fietz Rem...</td>\n",
+       "      <td>[Dua Lipa, Future Nostalgia (Jon Goddard Remix...</td>\n",
+       "      <td>[Dua Lipa, Dua Lipa - Blow Your Mind (Mwah) (T...</td>\n",
+       "      <td>[Dua Lipa, Dua Lipa - Hotter Than Hell (Traduc...</td>\n",
+       "      <td>[Dua Lipa, Dua Lipa - IDGAF (Traducción al Esp...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 248 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      0                                                  1    \\\n",
+       "0  [Artist, Title, Lyric]  [Dua Lipa, New Rules, one one one one one   ta...   \n",
+       "\n",
+       "                                                 2    \\\n",
+       "0  [Dua Lipa, Don’t Start Now, if you don't wanna...   \n",
+       "\n",
+       "                                                 3    \\\n",
+       "0  [Dua Lipa, IDGAF, you call me all friendly tel...   \n",
+       "\n",
+       "                                                 4    \\\n",
+       "0  [Dua Lipa, Blow Your Mind (Mwah), i know it's ...   \n",
+       "\n",
+       "                                                 5    \\\n",
+       "0  [Dua Lipa, Be the One, i see the moon i see th...   \n",
+       "\n",
+       "                                                 6    \\\n",
+       "0  [Dua Lipa, Break My Heart, i've always been th...   \n",
+       "\n",
+       "                                                 7    \\\n",
+       "0  [Dua Lipa, Homesick, dua lipa here where the s...   \n",
+       "\n",
+       "                                                 8    \\\n",
+       "0  [Dua Lipa, Levitating, if you wanna run away w...   \n",
+       "\n",
+       "                                                 9    ...  \\\n",
+       "0  [Dua Lipa, Physical, common love isn't for us ...  ...   \n",
+       "\n",
+       "                                                 238  \\\n",
+       "0  [Dua Lipa, New Love (Jarreau Vandal Remix), no...   \n",
+       "\n",
+       "                                                 239  \\\n",
+       "0  [Dua Lipa, Electricity (StarFox Remix), dua li...   \n",
+       "\n",
+       "                                                 240  \\\n",
+       "0  [Dua Lipa, Get Over You, hey hey   after a few...   \n",
+       "\n",
+       "                                                 241  \\\n",
+       "0  [Dua Lipa, New Love (Paraone Remix), now it's ...   \n",
+       "\n",
+       "                                                 242  \\\n",
+       "0  [Dua Lipa, Hotter Than Hell (Shadow Child Remi...   \n",
+       "\n",
+       "                                                 243  \\\n",
+       "0  [Dua Lipa, Hotter Than Hell (Carsten Fietz Rem...   \n",
+       "\n",
+       "                                                 244  \\\n",
+       "0  [Dua Lipa, Future Nostalgia (Jon Goddard Remix...   \n",
+       "\n",
+       "                                                 245  \\\n",
+       "0  [Dua Lipa, Dua Lipa - Blow Your Mind (Mwah) (T...   \n",
+       "\n",
+       "                                                 246  \\\n",
+       "0  [Dua Lipa, Dua Lipa - Hotter Than Hell (Traduc...   \n",
+       "\n",
+       "                                                 247  \n",
+       "0  [Dua Lipa, Dua Lipa - IDGAF (Traducción al Esp...  \n",
+       "\n",
+       "[1 rows x 248 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# importing csv module\n",
+    "\n",
+    " \n",
+    "# csv file name\n",
+    "filename = 'lyrics.csv'\n",
+    " \n",
+    "with open(filename) as csv_file:\n",
+    "    # read the csv file\n",
+    "    csv_reader = csv.reader(csv_file)\n",
+    " \n",
+    "    # now we can use this csv files into the pandas\n",
+    "    df = pd.DataFrame([csv_reader], index = None)\n",
+    " \n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0a2ce545",
+   "id": "bcb78cbe",
    "metadata": {},
    "outputs": [],
    "source": []
